Update testing docs
Signed-off-by: mantissahz <mantissahz@users.noreply.github.com>

--- a/integration/test_zone.html
+++ b/integration/test_zone.html
@@ -659,7 +659,7 @@ def test_replica_auto_balance_when_no_storage_available_in_zone(client, core_api
     volume = client.create_volume(name=volume_name,
                                   numberOfReplicas=num_of_replicas)
 
-    # Wait for ht evolume to detach and attache it to the test pod node
+    # Wait for the volume to detach and attach it to the test pod node
     volume = wait_for_volume_detached(client, volume_name)
     volume.attach(hostId=get_self_host_id())
 
@@ -1658,7 +1658,7 @@ And replica count remains stable across zones and nodes.</p></div>
     volume = client.create_volume(name=volume_name,
                                   numberOfReplicas=num_of_replicas)
 
-    # Wait for ht evolume to detach and attache it to the test pod node
+    # Wait for the volume to detach and attach it to the test pod node
     volume = wait_for_volume_detached(client, volume_name)
     volume.attach(hostId=get_self_host_id())
 
