--- a/manual/pre-release/node-not-ready/node-disconnection/node-disconnection/index.html
+++ b/manual/pre-release/node-not-ready/node-disconnection/node-disconnection/index.html
@@ -828,17 +828,17 @@
     <article id="content">
        <p><a href="https://github.com/longhorn/longhorn/issues/1545">https://github.com/longhorn/longhorn/issues/1545</a>
 For disconnect node : <a href="https://github.com/longhorn/longhorn/files/4864127/network_down.sh.zip">https://github.com/longhorn/longhorn/files/4864127/network_down.sh.zip</a></p>
-<p>If auto-salvage is disabled, the auto-reattachment behavior after the node disconnection depends on all replicas are in ERROR state or not.</p>
+<p>If auto-salvage is disabled, the behavior after the node disconnection depends on all replicas are in ERROR state or not.</p>
 <p>(1) If all replicas are in ERROR state, the volume would remain in detached/faulted state if auto-salvage is disabled.</p>
-<p>(2) If there is any healthy replica, the volume would be auto-reattached even though auto-salvage is disabled.</p>
+<p>(2) If there is any healthy replica, the volume would start the replica rebuild process(if necessary) after node back.</p>
 <p>What makes all replicas in ERROR state? When there is data writing during the disconnection:</p>
 <p>(1) If the engine process is unable to talk with a replica (the engine process and the replica are on the different nodes), the engine process will mark the replica as ERROR.</p>
 <p>(2) But if the engine process is still able to talk with a replica (the engine process and the replica are on the same node), the engine process will just mark the replica as UNKNOWN state, and the replica will recover to RUNNING state after the network connection is back. Then other replicas can be rebuilt from the replica.</p>
 <p>So we have 2 * 2 test cases for node disconnection + disabled auto-salvage:</p>
 <p>(Case 1-1) there is no replica on the attached node + data writing during the disconnection -&gt; all replicas become ERROR -&gt; no auto-reattach after the disconnection</p>
-<p>(Case 1-2) there is a replica on the attached node + data writing during the disconnection -&gt; one replica can recover to healthy -&gt; auto-reattach after the disconnection</p>
-<p>(Case 2-1) there is no replica on the attached node + no data writing during the disconnection -&gt; other replicas are still healthy -&gt; auto-reattach after the disconnection</p>
-<p>(Case 2-2) there is a replica on the attached node + no data writing during the disconnection -&gt; other replicas are still healthy -&gt; auto-reattach after the disconnection</p>
+<p>(Case 1-2) there is a replica on the attached node + data writing during the disconnection -&gt; one replica can recover to healthy -&gt; the volume become degraded and start replica rebuilding then become healthy</p>
+<p>(Case 2-1) there is no replica on the attached node + no data writing during the disconnection -&gt; other replicas are still healthy -&gt; the volume in attached state, robustness changed from unknown to healthy</p>
+<p>(Case 2-2) there is a replica on the attached node + no data writing during the disconnection -&gt; other replicas are still healthy -&gt; the volume in attached state, robustness changed from unknown to healthy</p>
 <h3 id="case-1-1">Case 1-1:</h3>
 <ol>
 <li>Disable auto-salvage.</li>
@@ -857,7 +857,8 @@ For disconnect node : <a href="https://github.com/longhorn/longhorn/files/486412
 <li>Keep writing data directly to the volume. (sudo dd if=/dev/urandom of=/dev/longhorn/test-1 bs=2M count=2048)</li>
 <li>Disconnect the network of the node that the volume attached to for 100 seconds during the data writing. (sudo nohup ./network_down.sh 100)</li>
 <li>Wait for the node back.</li>
-<li>The volume will be detached then reattached automatically, and replicas should still be in RUNNING state.</li>
+<li>The volume will be in degraded state and then started the replica rebuilding process.</li>
+<li>The volume become healthy.</li>
 </ol>
 <h3 id="case-2-1">Case 2-1:</h3>
 <ol>
@@ -866,7 +867,7 @@ For disconnect node : <a href="https://github.com/longhorn/longhorn/files/486412
 <li>Attach the volume to the 3rd node.</li>
 <li>No need to write data to the volume. Directly disconnect the network of the node that the volume attached to for 100 seconds. (sudo nohup ./network_down.sh 100)</li>
 <li>Wait for the node back.</li>
-<li>The volume will be detached then reattached automatically, and replicas should still be in RUNNING state.</li>
+<li>The volume will be in an attached state with its robustness unknown at first, then the volume become healthy.</li>
 </ol>
 <h3 id="case-2-2">Case 2-2:</h3>
 <ol>
@@ -875,7 +876,7 @@ For disconnect node : <a href="https://github.com/longhorn/longhorn/files/486412
 <li>Attach the volume to a node.</li>
 <li>No need to write data to the volume. Directly disconnect the network of the node that the volume attached to for 100 seconds. (sudo nohup ./network_down.sh 100)</li>
 <li>Wait for the node back.</li>
-<li>The volume will be detached then reattached automatically, and replicas should still be in RUNNING state.</li>
+<li>The volume will be in an attached state with its robustness unknown at first, then the volume become healthy.</li>
 </ol>
 <h3 id="case-3">Case 3:</h3>
 <ol>
@@ -884,11 +885,10 @@ For disconnect node : <a href="https://github.com/longhorn/longhorn/files/486412
 <li>Run command &lsquo;sync&rsquo; in pod, make sure data fulshed.</li>
 <li>Disconnect the node that the volume attached to for 100 seconds.</li>
 <li>Wait for the node back and the volume reattachment.</li>
-<li>After the volume is reattached, the pod will be automatically deleted and recreate.</li>
+<li>The volume will be in an attached state with its robustness unknown at first, then the volume become healthy</li>
 <li>Verify the data and the pod still works fine.</li>
 <li>Repeat step 2~6 for 3 times.</li>
 <li>Create, Attach, and detach other volumes to the recovered node. All volumes should work fine.</li>
-<li>Remove Longhorn and repeat step 1~9 for 3 times.</li>
 </ol>
 
     </article>
